<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        app:cardElevation="4dp"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/countries_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/country_name_str"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/countries_card_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_name"
                android:padding="8dp"
                android:text="@string/country_cases_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/countries_card_active_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_cases"
                android:padding="8dp"
                android:text="@string/country_active_cases_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/countries_card_today_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_active_cases"
                android:padding="8dp"
                android:text="@string/country_today_cases_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/countries_card_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_today_cases"
                android:padding="8dp"
                android:text="@string/country_deaths_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/countries_card_today_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_deaths"
                android:padding="8dp"
                android:text="@string/country_today_deaths_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/countries_card_recoveries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/countries_card_today_deaths"
                android:padding="8dp"
                android:text="@string/country_recoveries_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>