<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:cardElevation="4dp"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/news_card_picture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/update_pic"
                android:scaleType="centerCrop"
                android:background="@drawable/search_drawable"
                android:contentDescription="@string/image_desc"/>

            <TextView
                android:id="@+id/news_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/news_title_here"
                android:layout_alignParentStart="true"
                android:layout_below="@id/news_card_picture"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/news_card_content"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/news_content_string"
                android:layout_alignParentStart="true"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_below="@id/news_card_title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/news_card_source_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/news_source_name_str"
                android:layout_below="@id/news_card_content"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>